# fmanager

./: CMakeLists.txt  README.md  fileops.c  fileops.h  gui.c  gui.h  main.c  perms.c  perms.h
lib/: CMakeLists.txt  anotherlib.c  exec.c
